sumo/tests/sumo/errors/duplicates/net_junction/errors.sumo
Error: Another junction with the id '2' exists.
Quitting (on error).
